# pipelines

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.h  pipelines.h  readme.md
cmake/: FindBreathe.cmake  FindClangTidy.cmake  FindCppcheck.cmake  FindLizard.cmake  FindSphinx.cmake  PipelinesCompilerSupport.cmake
documentation/: CMakeLists.txt  building.rst  conf.py  doxyfile  index.rst  pipe.rst
pipelines/: CMakeLists.txt
pipelines/pipelines/: pipe.h
unit_tests/: CMakeLists.txt  pipe_test.cpp  signal_test.cpp
