find_package(Catch2 REQUIRED)
include(Catch)
set(tests pipe_test)
foreach(test IN LISTS tests)
  add_executable(${test} ${test}.cpp)
  target_link_libraries(${test} PRIVATE pipelines::pipelines Catch2::Catch2)
  target_compile_options(${test} PRIVATE ${pipelines_compiler_options})
  catch_discover_tests(${test})
endforeach()
